tests/build/widget/missing_semi.stderr
error: expected `;`
 --> $DIR/missing_semi.rs:9:9
  |
9 |         margin = 10
  |         ^^^^^^
